feat: adds row feature to prevent drawing the same row multiple times a frame

--- a/ASCIIRenderer/ASCIIRenderer.csproj
+++ b/ASCIIRenderer/ASCIIRenderer.csproj
@@ -50,9 +50,15 @@
     <Compile Include="MeshHelpers.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Row.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Drawable\" />
+    <Folder Include="Main\" />
+    <Folder Include="Renderer\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
