--- a/ASCIIRenderer/ASCIIRenderer.csproj
+++ b/ASCIIRenderer/ASCIIRenderer.csproj
@@ -44,21 +44,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Drawable.cs" />
-    <Compile Include="ConsoleRenderer.cs" />
-    <Compile Include="Mesh.cs" />
-    <Compile Include="MeshHelpers.cs" />
-    <Compile Include="Program.cs" />
+    <Compile Include="Drawable\Drawable.cs" />
+    <Compile Include="Renderer\ConsoleRenderer.cs" />
+    <Compile Include="Drawable\Mesh.cs" />
+    <Compile Include="Drawable\MeshHelpers.cs" />
+    <Compile Include="Main\Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Row.cs" />
+    <Compile Include="Renderer\Row.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Drawable\" />
-    <Folder Include="Main\" />
-    <Folder Include="Renderer\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
