--- a/ASCIIRenderer/ASCIIRenderer.csproj
+++ b/ASCIIRenderer/ASCIIRenderer.csproj
@@ -45,11 +45,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Drawable\Drawable.cs" />
+    <Compile Include="Renderer\ConsoleFrameDefinition.cs" />
     <Compile Include="Renderer\ConsoleRenderer.cs" />
     <Compile Include="Drawable\Mesh.cs" />
     <Compile Include="Drawable\MeshHelpers.cs" />
     <Compile Include="Main\Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Renderer\IFrameDefinition.cs" />
     <Compile Include="Renderer\Row.cs" />
   </ItemGroup>
   <ItemGroup>
