--- a/ASCIIRenderer/ASCIIRenderer.csproj
+++ b/ASCIIRenderer/ASCIIRenderer.csproj
@@ -45,14 +45,16 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Drawable\Drawable.cs" />
-    <Compile Include="Renderer\ConsoleFrameDefinition.cs" />
-    <Compile Include="Renderer\ConsoleRenderer.cs" />
+    <Compile Include="Renderer\Definitions\ConsoleFrameDefinition.cs" />
+    <Compile Include="Renderer\FrameRenderer.cs" />
     <Compile Include="Drawable\Mesh.cs" />
     <Compile Include="Drawable\MeshHelpers.cs" />
     <Compile Include="Main\Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Renderer\IFrameDefinition.cs" />
-    <Compile Include="Renderer\Row.cs" />
+    <Compile Include="Renderer\Definitions\IFrameDefinition.cs" />
+    <Compile Include="Renderer\General\RendererContants.cs" />
+    <Compile Include="Renderer\Rows\Row.cs" />
+    <Compile Include="Renderer\Rows\RowTable.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
