--- a/ASCIIRenderer/ASCIIRenderer.csproj
+++ b/ASCIIRenderer/ASCIIRenderer.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Renderer\Definitions\IFrameDefinition.cs" />
     <Compile Include="Renderer\General\RendererContants.cs" />
+    <Compile Include="Renderer\Logging\Logger.cs" />
     <Compile Include="Renderer\Rows\Row.cs" />
     <Compile Include="Renderer\Rows\RowTable.cs" />
   </ItemGroup>
