--- a/ASCIIRenderer/ASCIIRenderer.csproj
+++ b/ASCIIRenderer/ASCIIRenderer.csproj
@@ -44,18 +44,23 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Drawable\Drawable.cs" />
-    <Compile Include="Renderer\Definitions\ConsoleFrameDefinition.cs" />
+    <Compile Include="FrameManagement\Rows\ConsoleRow.cs" />
+    <Compile Include="Graphics\Drawable\ConsoleDrawable.cs" />
+    <Compile Include="Graphics\Drawable\ConsoleLoggerDrawable.cs" />
+    <Compile Include="Graphics\Drawable\Drawable.cs" />
+    <Compile Include="FrameManagement\Definitions\ConsoleFrameDefinition.cs" />
+    <Compile Include="Graphics\Drawable\ConsoleMeshDrawable.cs" />
+    <Compile Include="Graphics\Mesh\MeshTransform.cs" />
     <Compile Include="Renderer\FrameRenderer.cs" />
-    <Compile Include="Drawable\Mesh.cs" />
-    <Compile Include="Drawable\MeshHelpers.cs" />
+    <Compile Include="Graphics\Mesh\Mesh.cs" />
+    <Compile Include="Graphics\Mesh\MeshHelpers.cs" />
     <Compile Include="Main\Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Renderer\Definitions\IFrameDefinition.cs" />
-    <Compile Include="Renderer\General\RendererContants.cs" />
-    <Compile Include="Renderer\Logging\Logger.cs" />
-    <Compile Include="Renderer\Rows\Row.cs" />
-    <Compile Include="Renderer\Rows\RowTable.cs" />
+    <Compile Include="FrameManagement\Definitions\IFrameDefinition.cs" />
+    <Compile Include="General\RendererContants.cs" />
+    <Compile Include="Logging\Logger.cs" />
+    <Compile Include="FrameManagement\Rows\Row.cs" />
+    <Compile Include="FrameManagement\Rows\RowTable.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
